# meeting-companion

./: .gitignore  .gitleaksignore  .release-please-manifest.json  CONTRIBUTING.md  Comparison.md  Idea.md  Implementation.md  LICENSE  Option1-TUI.md  Option1-TechStack-Analysis.md  Option2-NativeMacOS.md  Option3-WebServices.md  Public-Portfolio-Readiness-Plan.md  README.md  SECURITY.md  release-please-config.json
.github/workflows/: ci.yml  pr-title.yml  publish.yml  release-please.yml
meeting-tui/: .env.example  CHANGELOG.md  QUICK_START.md  README.md  TECHNICAL_DESIGN.md  pyproject.toml
meeting-tui/_review/: REVIEW_REPORT_1.md  REVIEW_REPORT_2.md  impl-plan.md
meeting-tui/src/meeting_tui/: __init__.py  __main__.py  app.py  config.py
meeting-tui/src/meeting_tui/audio/: capture.py  vad.py
meeting-tui/src/meeting_tui/chat/: manager.py
meeting-tui/src/meeting_tui/llm/: base.py  gemini_backend.py  ollama_backend.py  openai_backend.py
meeting-tui/src/meeting_tui/persistence/: json_writer.py  transcript_writer.py
meeting-tui/src/meeting_tui/transcription/: cleaner.py  engine.py
meeting-tui/src/meeting_tui/widgets/: chat_pane.py  status_bar.py  transcript_pane.py
meeting-tui/tests/: test_audio_capture.py  test_chat_manager.py  test_integration.py  test_llm_backends.py  test_transcription.py
